Closed Bug 627067 Opened 14 years ago Closed 13 years ago

Dialogs are broken in qt desktop

Categories

(Core Graveyard :: Widget: Qt, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: tatiana, Assigned: tatiana)

References

Details

Attachments

(3 files, 2 obsolete files)

Open qt desktop Firefox build

1. open >1 tab in browser
2. close browser

EXPECTED:
close dialog in separate window

ACTUAL:
qgraphicswidget_dialog.png
Attached patch draft (obsolete) — Splinter Review
Attached patch patch (obsolete) — Splinter Review
Assignee: nobody → tanya.meshkova
Attachment #505100 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #505373 - Flags: review?(romaxa)
Oleg, are you waiting for Bug 626595 ?
Depends on: 626595
rebased against http://tbpl.mozilla.org/?tree=MozillaTry&rev=196f464354d9
Attachment #505373 - Attachment is obsolete: true
Attachment #509086 - Flags: review?(romaxa)
Attachment #505373 - Flags: review?(romaxa)
Attachment #509087 - Flags: review?(romaxa)
Comment on attachment 509086 [details] [diff] [review]
Part 1: Qt topLevel dialogs support

Works good now, also works acceptable on maemo6
Attachment #509086 - Flags: review?(romaxa) → review+
Comment on attachment 509087 [details] [diff] [review]
Part 2: Qt topLevel move support

good, works even with my broken window manager.
Attachment #509087 - Flags: review?(romaxa) → review+
http://hg.mozilla.org/mozilla-central/rev/1317342408b9
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: