Bug 627067 - Dialogs are broken in qt desktop r=romaxa a=npotb * * * Bug 627067. Part 2: Qt topLevel move support